Prevent two-column content from overflowing into a 3rd column.

--- a/src/css/elements/autonomous/containers/stat-block.css
+++ b/src/css/elements/autonomous/containers/stat-block.css
@@ -53,6 +53,9 @@
   -webkit-column-fill: auto;
      -moz-column-fill: auto;
           column-fill: auto;
+
+  /* Hide any content that overflows into a 3rd column. */
+  overflow: hidden;
 }
 
 :host([data-two-column]) .content-wrap {
